# django-queryhunter

./: LICENSE  README.md  manage.py  pyproject.toml  settings.py
queryhunter/: __init__.py  context_manager.py  middleware.py  queryhunter.py  reporting.py
queryhunter/tests/: models.py  my_module.py  tests.py  urls.py  views.py
queryhunter/tests/migrations/: 0001_initial.py
